remove dependence to JAXB